src/main/resources/cpp/tests/neg/N01_redeclaration.cpp
int main() {
    int x;
    int x; // Fehler: Re-Definition im gleichen Scope

    return 0;
}
